create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -27,11 +27,11 @@ body {
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-display: swap;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.4rem;
+  font-size: 1.92rem;
 }
 .display-7 {
   font-family: 'Rubik', sans-serif;
@@ -63,9 +63,9 @@ body {
     line-height: calc( 1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.2rem;
-    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.96rem;
+    font-size: calc( 1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -1841,7 +1841,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-qYhJ33wf8P {
-  padding-top: 0px;
+  padding-top: 30px;
   padding-bottom: 0px;
   background-color: #000000;
 }
@@ -2127,4 +2127,696 @@ section.lazy-placeholder:after {
   flex: 0 0 auto;
   width: auto;
   max-width: 100%;
+}
+.cid-tWboUy4aUT {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-tWb1MC2ShT {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-tWb1MC2ShT .mbr-section-subtitle,
+.cid-tWb1MC2ShT .mbr-text {
+  color: #767676;
+}
+.cid-tWb1MC2ShT .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-tWb1MC2ShT .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tWb1MC2ShT .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-tWb1MC2ShT .card-wrapper .card-img .mbr-overlay {
+  background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-tWb1MC2ShT .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
+.cid-tWb1MC2ShT .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-tWb1MC2ShT .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-tWb1MC2ShT .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-tWb1MC2ShT .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-tWb1MC2ShT .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.cid-tWb1MC2ShT .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-tWb1MC2ShT .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-tWb1MC2ShT .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-tWb1MC2ShT .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-tWb1MC2ShT .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tWb1MC2ShT .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-tWb1MC2ShT .card-title {
+  text-align: center;
+}
+.cid-tWb5gfnEl2 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-tWb5gfnEl2 .mbr-section-subtitle,
+.cid-tWb5gfnEl2 .mbr-text {
+  color: #767676;
+}
+.cid-tWb5gfnEl2 .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-tWb5gfnEl2 .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tWb5gfnEl2 .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-tWb5gfnEl2 .card-wrapper .card-img .mbr-overlay {
+  background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-tWb5gfnEl2 .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
+.cid-tWb5gfnEl2 .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-tWb5gfnEl2 .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-tWb5gfnEl2 .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-tWb5gfnEl2 .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-tWb5gfnEl2 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.cid-tWb5gfnEl2 .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-tWb5gfnEl2 .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-tWb5gfnEl2 .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-tWb5gfnEl2 .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-tWb5gfnEl2 .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tWb5gfnEl2 .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-tWb5gfnEl2 .card-title {
+  text-align: center;
+}
+.cid-tWb5sjS1bb {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-tWb5sjS1bb .mbr-section-subtitle,
+.cid-tWb5sjS1bb .mbr-text {
+  color: #767676;
+}
+.cid-tWb5sjS1bb .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-tWb5sjS1bb .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tWb5sjS1bb .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-tWb5sjS1bb .card-wrapper .card-img .mbr-overlay {
+  background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-tWb5sjS1bb .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
+.cid-tWb5sjS1bb .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-tWb5sjS1bb .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-tWb5sjS1bb .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-tWb5sjS1bb .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-tWb5sjS1bb .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.cid-tWb5sjS1bb .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-tWb5sjS1bb .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-tWb5sjS1bb .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-tWb5sjS1bb .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-tWb5sjS1bb .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tWb5sjS1bb .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-tWb5sjS1bb .card-title {
+  text-align: center;
+}
+.cid-tWb5sZjZSx {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-tWb5sZjZSx .mbr-section-subtitle,
+.cid-tWb5sZjZSx .mbr-text {
+  color: #767676;
+}
+.cid-tWb5sZjZSx .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-tWb5sZjZSx .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tWb5sZjZSx .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-tWb5sZjZSx .card-wrapper .card-img .mbr-overlay {
+  background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-tWb5sZjZSx .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
+.cid-tWb5sZjZSx .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-tWb5sZjZSx .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-tWb5sZjZSx .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-tWb5sZjZSx .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-tWb5sZjZSx .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.cid-tWb5sZjZSx .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-tWb5sZjZSx .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-tWb5sZjZSx .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-tWb5sZjZSx .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-tWb5sZjZSx .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tWb5sZjZSx .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-tWb5sZjZSx .card-title {
+  text-align: center;
+}
+.cid-tWbin1MYSE {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-tWbin1MYSE .mbr-section-subtitle,
+.cid-tWbin1MYSE .mbr-text {
+  color: #767676;
+}
+.cid-tWbin1MYSE .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-tWbin1MYSE .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tWbin1MYSE .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-tWbin1MYSE .card-wrapper .card-img .mbr-overlay {
+  background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-tWbin1MYSE .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
+.cid-tWbin1MYSE .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-tWbin1MYSE .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-tWbin1MYSE .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-tWbin1MYSE .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-tWbin1MYSE .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.cid-tWbin1MYSE .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-tWbin1MYSE .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-tWbin1MYSE .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-tWbin1MYSE .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-tWbin1MYSE .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tWbin1MYSE .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-tWbin1MYSE .card-title {
+  text-align: center;
+}
+.cid-tWbkdBjyit {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #000000;
+}
+.cid-tWbkdBjyit .mbr-section-subtitle,
+.cid-tWbkdBjyit .mbr-text {
+  color: #767676;
+}
+.cid-tWbkdBjyit .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-tWbkdBjyit .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tWbkdBjyit .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-tWbkdBjyit .card-wrapper .card-img .mbr-overlay {
+  background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-tWbkdBjyit .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
+.cid-tWbkdBjyit .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-tWbkdBjyit .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-tWbkdBjyit .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-tWbkdBjyit .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-tWbkdBjyit .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.cid-tWbkdBjyit .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-tWbkdBjyit .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-tWbkdBjyit .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-tWbkdBjyit .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-tWbkdBjyit .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tWbkdBjyit .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-tWbkdBjyit .card-title {
+  text-align: center;
+}
+.cid-tWblGf9uQ5 {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #000000;
+}
+.cid-qYhJ33wf8P {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-qYhJ33wf8P .media-container-row .mbr-text {
+  text-align: center;
+}
+.cid-tWbrJataej {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #000000;
+}
+@media (min-width: 992px) {
+  .cid-tWbrJataej .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tWbrJataej .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tWbrJataej .mbr-text {
+    text-align: center;
+  }
+}
+.cid-tWbrJataej H1 {
+  color: #ffffff;
+}
+.cid-tWbrJataej .mbr-text,
+.cid-tWbrJataej .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-tWbu0mpKt3 {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-tWbu0mpKt3 .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tWbu0mpKt3 .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tWbu0mpKt3 .mbr-text {
+    text-align: center;
+  }
+}
+.cid-tWbu0mpKt3 .mbr-text,
+.cid-tWbu0mpKt3 .mbr-section-btn {
+  color: #000000;
+}
+.cid-tWbu0mpKt3 H1 {
+  color: #000000;
+}
+.cid-tWbuDDMS0o {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 30px;
+}
+.cid-tWbuDDMS0o .image-block {
+  margin: auto;
+}
+.cid-tWbuDDMS0o figcaption {
+  position: relative;
+}
+.cid-tWbuDDMS0o figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-tWbuDDMS0o .image-block {
+    width: 100% !important;
+  }
+}
+.cid-tWbv8IXyvd {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.cid-tWbv8IXyvd .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-tWbv8IXyvd .video-block {
+    width: 100% !important;
+  }
+}
+.cid-tWbtL57TC1 {
+  padding-top: 15px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-tWbtL57TC1 .mbr-text,
+.cid-tWbtL57TC1 blockquote {
+  color: #767676;
+}
+.cid-tWbtL57TC1 .mbr-text {
+  color: #000000;
+}
+.cid-tWbxHDMf8x {
+  background: #000000;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.cid-tWbxHDMf8x .image-block {
+  margin: auto;
+}
+.cid-tWbxHDMf8x figcaption {
+  position: relative;
+}
+.cid-tWbxHDMf8x figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-tWbxHDMf8x .image-block {
+    width: 100% !important;
+  }
+}
+.cid-tWbvIHGa6g {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #000000;
+}
+.cid-qYhJ33wf8P {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-qYhJ33wf8P .media-container-row .mbr-text {
+  text-align: center;
 }
