--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1197,6 +1197,15 @@ section.lazy-placeholder:after {
   display: none;
   transition: opacity .3s;
 }
+.cid-tTbs65DMnT .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
 .cid-tTbs65DMnT .card-wrapper .card-img img {
   width: 100%;
 }
@@ -1222,8 +1231,14 @@ section.lazy-placeholder:after {
   display: block !important;
   opacity: 0;
 }
+.cid-tTbs65DMnT .card-img .mbr-section-btn {
+  opacity: 0;
+}
 .cid-tTbs65DMnT .card-img:hover .mbr-overlay {
   opacity: .5;
+}
+.cid-tTbs65DMnT .card-img:hover .mbr-section-btn {
+  opacity: 1;
 }
 .cid-tTbs65DMnT .mbr-section-title {
   color: #ffffff;
